# platform_packages_apps_NetworkLocation

./: Android.bp  AndroidManifest.xml  LICENSE.txt  preinstalled-packages_app.grapheneos.networklocation.xml  privapp_whitelist_app.grapheneos.networklocation.xml
etc/sysconfig/: app.grapheneos.networklocation.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
interop/multilateration_kotlin/: Android.bp
interop/multilateration_rust/: Android.bp  Cargo.toml
interop/multilateration_rust/src/: lib.rs  oldlib.rs
java/app/grapheneos/networklocation/: NetworkLocationProvider.kt
proto/: Android.bp  apple_cps.proto  apple_wps.proto
res/values/: strings.xml
res/xml/: network_security_config.xml
src/app/grapheneos/networklocation/: LocationProviderImpl.kt  NetworkLocationProvider.kt  NetworkLocationRepository.kt  NetworkLocationService.kt  PositionEstimation.kt  PositioningData.kt  Utils.kt  WifiScanner.kt
src/app/grapheneos/networklocation/cell/: AppleCellPositioningService.kt  CellPositioningService.kt  CellPositioningServiceCache.kt  CellTowerScanner.kt
src/app/grapheneos/networklocation/cell/nearby/: NearbyCellRepository.kt
src/app/grapheneos/networklocation/misc/: ExponentialBackOff.kt  RustyResult.kt
src/app/grapheneos/networklocation/nearby_wifi_access_points_positioning_data/: NearbyWifiAccessPointsPositioningDataRepository.kt
src/app/grapheneos/networklocation/wifi/: AppleWifiPositioningService.kt  LocationReportingTask.kt  WifiApScanner.kt  WifiPositioningService.kt  WifiPositioningServiceCache.kt
(+22 files in other folders)
