# CARGO IS NOT USED FOR BUILDING IN ANDROID, THIS IS ONLY FOR LOCAL DEVELOPMENT.

[package]
name = "multilateration"
version = "0.1.0"
edition = "2021"

# TODO: use vendored versions used in Android
[dependencies]
android_logger = "0.14.1"
env_logger = "0.11.6"
jni = "0.21.1"
log = "0.4.26"
rand = "0.9.0"
